# cd-assistant

./: Cargo.toml  README.md
docs/ja/: README.md
shell/: cda.bash
src/: app.rs  main.rs  tree.rs
src/app/: core.rs  popup.rs
